added redis template